--- a/.classpath
+++ b/.classpath
@@ -1,48 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="test" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src" including="**/*.java"/>
+  <classpathentry kind="src" path="src/test/clj" output="target/test-classes" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/clj" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="var" path="M2_REPO/org/clojure/clojure/1.8.0/clojure-1.8.0.jar" sourcepath="M2_REPO/org/clojure/clojure/1.8.0/clojure-1.8.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/webica/webica/3.0.0-beta2-clj0/webica-3.0.0-beta2-clj0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/camel-snake-kebab/camel-snake-kebab/0.4.0/camel-snake-kebab-0.4.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/environ/environ/1.1.0/environ-1.1.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/clojure/tools.cli/0.3.5/tools.cli-0.3.5.jar" sourcepath="M2_REPO/org/clojure/tools.cli/0.3.5/tools.cli-0.3.5-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/easy-config/easy-config/0.1.2/easy-config-0.1.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/me/raynes/fs/1.4.6/fs-1.4.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-compress/1.8/commons-compress-1.8.jar" sourcepath="M2_REPO/org/apache/commons/commons-compress/1.8/commons-compress-1.8-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/tukaani/xz/1.5/xz-1.5.jar" sourcepath="M2_REPO/org/tukaani/xz/1.5/xz-1.5-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/avenir/avenir/0.2.1/avenir-0.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/taoensso/timbre/4.7.3/timbre-4.7.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/taoensso/encore/2.67.2/encore-2.67.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/clojure/tools.reader/0.10.0/tools.reader-0.10.0.jar" sourcepath="M2_REPO/org/clojure/tools.reader/0.10.0/tools.reader-0.10.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/taoensso/truss/1.3.3/truss-1.3.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/io/aviso/pretty/0.1.29/pretty-0.1.29.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-java/3.0.0-beta2/selenium-java-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-java/3.0.0-beta2/selenium-java-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-chrome-driver/3.0.0-beta2/selenium-chrome-driver-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-chrome-driver/3.0.0-beta2/selenium-chrome-driver-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-api/3.0.0-beta2/selenium-api-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-api/3.0.0-beta2/selenium-api-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-remote-driver/3.0.0-beta2/selenium-remote-driver-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-remote-driver/3.0.0-beta2/selenium-remote-driver-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/3.2.4/cglib-nodep-3.2.4.jar" sourcepath="M2_REPO/cglib/cglib-nodep/3.2.4/cglib-nodep-3.2.4-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-exec/1.3/commons-exec-1.3.jar" sourcepath="M2_REPO/org/apache/commons/commons-exec/1.3/commons-exec-1.3-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.2/commons-logging-1.2.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.2/commons-logging-1.2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.3.1/gson-2.3.1.jar" sourcepath="M2_REPO/com/google/code/gson/gson/2.3.1/gson-2.3.1-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/guava/guava/19.0/guava-19.0.jar" sourcepath="M2_REPO/com/google/guava/guava/19.0/guava-19.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpclient/4.5.2/httpclient-4.5.2.jar" sourcepath="M2_REPO/org/apache/httpcomponents/httpclient/4.5.2/httpclient-4.5.2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpcore/4.4.4/httpcore-4.4.4.jar" sourcepath="M2_REPO/org/apache/httpcomponents/httpcore/4.4.4/httpcore-4.4.4-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.9/commons-codec-1.9.jar" sourcepath="M2_REPO/commons-codec/commons-codec/1.9/commons-codec-1.9-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpmime/4.5.2/httpmime-4.5.2.jar" sourcepath="M2_REPO/org/apache/httpcomponents/httpmime/4.5.2/httpmime-4.5.2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/java/dev/jna/jna/4.1.0/jna-4.1.0.jar" sourcepath="M2_REPO/net/java/dev/jna/jna/4.1.0/jna-4.1.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/java/dev/jna/jna-platform/4.1.0/jna-platform-4.1.0.jar" sourcepath="M2_REPO/net/java/dev/jna/jna-platform/4.1.0/jna-platform-4.1.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-edge-driver/3.0.0-beta2/selenium-edge-driver-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-edge-driver/3.0.0-beta2/selenium-edge-driver-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-firefox-driver/3.0.0-beta2/selenium-firefox-driver-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-firefox-driver/3.0.0-beta2/selenium-firefox-driver-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-ie-driver/3.0.0-beta2/selenium-ie-driver-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-ie-driver/3.0.0-beta2/selenium-ie-driver-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-opera-driver/3.0.0-beta2/selenium-opera-driver-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-opera-driver/3.0.0-beta2/selenium-opera-driver-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-safari-driver/3.0.0-beta2/selenium-safari-driver-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-safari-driver/3.0.0-beta2/selenium-safari-driver-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/io/netty/netty/3.5.7.Final/netty-3.5.7.Final.jar" sourcepath="M2_REPO/io/netty/netty/3.5.7.Final/netty-3.5.7.Final-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/seleniumhq/selenium/selenium-support/3.0.0-beta2/selenium-support-3.0.0-beta2.jar" sourcepath="M2_REPO/org/seleniumhq/selenium/selenium-support/3.0.0-beta2/selenium-support-3.0.0-beta2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-all/1.3/hamcrest-all-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-all/1.3/hamcrest-all-1.3-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar" sourcepath="M2_REPO/junit/junit/4.12/junit-4.12-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/github/detro/ghostdriver/phantomjsdriver/1.1.0/phantomjsdriver-1.1.0.jar" sourcepath="M2_REPO/com/github/detro/ghostdriver/phantomjsdriver/1.1.0/phantomjsdriver-1.1.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/easy-config/easy-config/0.1.2/easy-config-0.1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/lein-bin/lein-bin/0.3.4/lein-bin-0.3.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/crypto-random/crypto-random/1.2.0/crypto-random-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.6/commons-codec-1.6.jar" sourcepath="M2_REPO/commons-codec/commons-codec/1.6/commons-codec-1.6-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/buddy/buddy/1.3.0/buddy-1.3.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/buddy/buddy-core/1.2.0/buddy-core-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/bouncycastle/bcprov-jdk15on/1.56/bcprov-jdk15on-1.56.jar" sourcepath="M2_REPO/org/bouncycastle/bcprov-jdk15on/1.56/bcprov-jdk15on-1.56-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/bouncycastle/bcpkix-jdk15on/1.56/bcpkix-jdk15on-1.56.jar" sourcepath="M2_REPO/org/bouncycastle/bcpkix-jdk15on/1.56/bcpkix-jdk15on-1.56-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/buddy/buddy-auth/1.4.0/buddy-auth-1.4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/buddy/buddy-sign/1.4.0/buddy-sign-1.4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/cheshire/cheshire/5.7.0/cheshire-5.7.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.8.6/jackson-core-2.8.6.jar" sourcepath="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.8.6/jackson-core-2.8.6-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/dataformat/jackson-dataformat-smile/2.8.6/jackson-dataformat-smile-2.8.6.jar" sourcepath="M2_REPO/com/fasterxml/jackson/dataformat/jackson-dataformat-smile/2.8.6/jackson-dataformat-smile-2.8.6-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/dataformat/jackson-dataformat-cbor/2.8.6/jackson-dataformat-cbor-2.8.6.jar" sourcepath="M2_REPO/com/fasterxml/jackson/dataformat/jackson-dataformat-cbor/2.8.6/jackson-dataformat-cbor-2.8.6-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/tigris/tigris/0.1.1/tigris-0.1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/funcool/cuerdas/2.0.2/cuerdas-2.0.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/clout/clout/2.1.2/clout-2.1.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/instaparse/instaparse/1.4.0/instaparse-1.4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/buddy/buddy-hashers/1.2.0/buddy-hashers-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/clojurewerkz/scrypt/1.2.0/scrypt-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/lambdaworks/scrypt/1.4.0/scrypt-1.4.0.jar" sourcepath="M2_REPO/com/lambdaworks/scrypt/1.4.0/scrypt-1.4.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/lein-bin/lein-bin/0.3.5/lein-bin-0.3.5.jar"/>
 </classpath>
